app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: novocart
  labels:
    name: novocart
    environment: production
